[project]
name = "nd-torus-interconnect"
version = "0.1.0"
description = "Utilities for building and visualizing N-dimensional torus interconnect graphs."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "networkx>=3.2",
    "numpy>=1.25",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "interconnect_nd_torus.py",
    "spectral_embedding.py",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"
